--- a/main.html
+++ b/main.html
@@ -6,6 +6,44 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
+	<style>
+
+		* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f5f5f5;
+}
+
+/* Container for the boxes */
+.container {
+    display: grid;
+    grid-template-columns: repeat(40, 20px); /* 40 columns */
+    grid-template-rows: repeat(20, 20px);    /* 20 rows */
+    gap: 2px;
+}
+
+/* Styling individual boxes */
+.square {
+    width: 20px;
+    height: 20px;
+    background-color: #ddd;
+    transition: background-color 1s ease;  /* Smooth transition on hover */
+}
+
+/* Hover effect */
+.square.hovered {
+    background-color: #3498db;
+}
+	</style>
+
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="container" id="color-board"></div>
@@ -18,14 +56,14 @@ const totalBoxes = 800; // Total number of boxes
 function getRandomColor() {
     const letters = '0123456789ABCDEF';
     let color = '#';
-    for (let i = 0; i < 6; i++) {
-        color += letters[Math.floor(Math.random() * 16)];
+    for (let i=0; i<6; i++) {
+        color += letters[Math.floor(Math.random()*16)];
     }
     return color;
 }
 
 // Create 800 square divs
-for (let i = 0; i < totalBoxes; i++) {
+for (let i=0; i<totalBoxes; i++) {
     const square = document.createElement('div');
     square.classList.add('square');
     
@@ -39,7 +77,7 @@ for (let i = 0; i < totalBoxes; i++) {
         setTimeout(() => {
             square.style.backgroundColor = '#ddd';
             square.classList.remove('hovered');
-        }, 1000);
+        }, 5000);
     });
     
     // Append the square to the container
