--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="container" id="color-board"></div>
-
+	<div class="square"></div>
 </body>
 
 </html>
