--- a/main.html
+++ b/main.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
 	<link rel="stylesheet" href="styles.css">
-</head>
 
+</head>
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="container" id="color-board"></div>
-	<div class="square"></div>
+	<div class="container">
+		
+	</div>
+	<script type="text/javascript" src="./script.js">
+    </script>
 </body>
-
 </html>
